--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,16 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "pydantic (>=2.12.5,<3.0.0)",
+    "ipython (>=9.9.0,<10.0.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+ollama = "^0.6.1"
+pydantic-core = "^2.41.5"
+
